--- a/views/news.html
+++ b/views/news.html
@@ -1,5 +1,5 @@
-<div id="newsPageContainer">
-    <section class="parallax main-banner">
+<div id="newsPageContainer" class="parallax">
+    <section class="main-banner parallax">
         <div class="container">
             <div>
                 <h1>News</h1>
@@ -7,5 +7,20 @@
             </div>
         </div>
     </section>
-    <section id="stuff" style="width: 100%; height: 50vh"></section>
+    <section id="newsPagePosts" class="parallax">
+        <div class="container">
+            <div class="post">
+                <div class="date">07/16/2016</div>
+                <div class="content">
+                    We are heading into the studio and are nearly ready to unleash some technical and intense metal on the world. Then we will hit the stage in the very near future to bring our music to the masses live in person.
+                </div>
+            </div>
+            <div class="post">
+                <div class="date">06/01/2015</div>
+                <div class="content">
+                    A touch of death, a dash of thrash, some blackened melodies with a vulgar rasp. Aggressive and dark, Divinity Cast Down is a metal band. Period. 
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
