Update news page

--- a/views/news.html
+++ b/views/news.html
@@ -16,6 +16,18 @@
                 </div>
             </div>
             <div class="post">
+                <div class="date">02/21/2016</div>
+                <div class="content">
+                    Divinity Cast Down welcomes another new member, Dennis Plotnik on guitar and backup vocals. Young and eager to learn, Dennis has picked up all the songs we currently have written, as well as added in his own lead lines to complete them. With him the lineup is now complete and we are excited to finally rehearse as a full band. 
+                </div>
+            </di>
+            <div class="post">
+                <div class="date">12/16/2015</div>
+                <div class="content">
+                    It is official. Divinity Cast Down welcomes Marius Necula to the fold as our new bassist. Talented and ambitious, Marius has been learning our originals for the past few weeks and adding his own flair to the sound. We are psyched to have him join us and the band is now nearly complete. We just need another guitarist; someone equally dedicated to our metal vision.
+                </div>
+            </div>
+            <div class="post">
                 <div class="date">06/01/2015</div>
                 <div class="content">
                     A touch of death, a dash of thrash, some blackened melodies with a vulgar rasp. Aggressive and dark, Divinity Cast Down is a metal band. Period. 
