--- a/views/shows.html
+++ b/views/shows.html
@@ -7,5 +7,9 @@
             </div>
         </div>
     </section>
-    <section id="stuff" style="width: 100%; height: 50vh"></section>
+    <section id="shows" class="parallax">
+        <div style="height: 50vh; padding: 10%; text-align: center; font-size: 4em; color: #ddd">
+            <i>Coming soon...</i>
+        </div>
+    </section>
 </div>
