--- a/views/404.html
+++ b/views/404.html
@@ -1,3 +1,10 @@
-<div class="jumbotron">
-    <h1>Whoops! Looks like you are somewhere that doesn't exist.</h1>
+<div id="404container">
+    <section class="parallax main-banner" style="height:100vh">
+        <div class="container">
+            <div>
+                <h1>404</h1>
+                <h2>Whoops! Looks like you are somewhere that doesn't exist.</h2>
+            </div>
+        </div>
+    </section>
 </div>
